# self-updating-database

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  ARCHITECTURE.md  README.md  architecture-lint.toml  eslint.config.mjs  package.json  pnpm-lock.yaml  prettier.config.mjs  pyproject.toml  tsconfig.base.json  tsconfig.json  vitest.config.ts
.github/: pull_request_template.md
.github/workflows/: architecture-lint.yml  ci-test.yml  doc-gardening.yml  doc-lint.yml  node-ci.yml  pr-checklist.yml  precommit.yml
.husky/: pre-commit
apps/: dev-server.ts
apps/api/: package.json
apps/api/src/: index.ts
apps/shared/: load-env.test.ts  load-env.ts
apps/web/: package.json
docs/: CHECKS.md  CHROME_DEVTOOLS_MCP.md  CLI.md  CODE_STANDARDS.md  DESIGN.md  FRONTEND.md  OBSERVABILITY.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md  TESTING.md  UI_VALIDATION.md
docs/design-docs/: core-beliefs.md  index.md
docs/exec-plans/: tech-debt-tracker.md
docs/product-specs/: index.md  new-user-onboarding.md
docs/references/: architecture-lint.md  demo-db-walkthrough.md  design-system-reference-llms.txt  doc-gardening.md  doc-integrity.md  nixpacks-llms.txt  retail-demo-script.md  uv-llms.txt
scripts/: __init__.py  ci-test-local  doc_gardening.py  doc_lint.py  lint-architecture  lint-plan
tests/: conftest.py  test_doc_lint.py
tools/: export-latest-pipelines.ts  generate-retail-demo-query-log-workbook.ts  generate-retail-demo-workbook.ts  generate-retail-log-inspired-dataset-2.ts  run-llm-sql-benchmark.ts
(+63 files in other folders)
